--- a/client/src/styles/views/_App.scss
+++ b/client/src/styles/views/_App.scss
@@ -7,7 +7,7 @@
     font-family: partyp;
     background-color: $darkgr;
     font-size: 25px;
-    color: $orange;
+    color: $magnolia;
 }
 
 @font-face {
