--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -1,14 +1,11 @@
 @import './views/App.scss';
 @import './components/Details';
-@import './components/Create';
 @import './components/EventCard';
 @import './components/EventList';
 @import './components/Footer';
 @import './components/Header';
 @import './components/Home';
-@import './components/Login';
 @import './components/MyEvents';
-@import './components/Signup';
-@import './components/Update';
 @import './components/Nav';
 @import './components/Loader';
+@import './components/Form'
