--- a/client/src/styles/components/_Details.scss
+++ b/client/src/styles/components/_Details.scss
@@ -1,3 +1,5 @@
+@import '../utils/variables.scss';
+
 .eventDetImg{
     width: 50%;
 }
@@ -5,4 +7,7 @@
 #eventDet{
     margin-bottom: 50px;
     border: 1px dashed $lightgr;
+    width: 70%;
+    margin: 50px auto;
+    padding-bottom: 20px;
 }
