--- a/client/src/styles/components/_Home.scss
+++ b/client/src/styles/components/_Home.scss
@@ -3,3 +3,14 @@
 p, h3{
     color:$magnolia;
 }
+
+#cities{
+    color: $lightgr;
+    padding: 10px;
+    border-radius: 50px;
+    background-color: $lightor;
+}
+
+h2{
+    text-decoration: underline;
+}
