--- a/client/src/styles/utils/variables.scss
+++ b/client/src/styles/utils/variables.scss
@@ -1,5 +1,7 @@
 $darkgr: #023C36;
 $lightgr: #00665E;
+$ultragr:#37978f;
 $magnolia: #ECE5F0;
 $orange: #E98A15;
+$lightor:#f7daa4;
 $purple: #59114D;
