--- a/client/src/styles/components/_EventCard.scss
+++ b/client/src/styles/components/_EventCard.scss
@@ -11,3 +11,28 @@
     width: 70%;
     margin: 50px auto;
 }
+
+
+
+@media screen and (max-width: 1000px) {
+    .eventImg{
+        width: 50%;
+    }
+}
+@media screen and (max-width: 800px) {
+    .card{ 
+        width: 90%;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    .eventImg{
+        width: 70%;
+    }
+}
+
+@media screen and (max-width: 350px) {
+    .eventImg{
+        width: 90%;
+    }
+}
